# space-game

./: .clang-format  .gitignore  .gitmodules  .ignore  CMakeLists.txt  LICENSE  README.md
include/: background.h  bullet.h  collisionhandler.h  collisionobjects.h  enemy.h  enemyspawner.h  gameobject.h  globals.h  musicplayer.h  player.h  scoredisplay.h
include/space-game/: bullet.hpp  player.hpp
src/: background.cpp  bullet.cpp  collisionhandler.cpp  collisionobjects.cpp  enemy.cpp  enemyspawner.cpp  globals.cpp  main.c  main.cpp  musicplayer.cpp  player.cpp  scoredisplay.cpp
